<resources>
    <string name="app_name">Onboarding VeriTran</string>
    <string name="paso1">Step 1</string>
    <string name="paso2">Step 2</string>
    <string name="paso3">Step 3</string>
    <string name="comparacion_exitosa">Successful Comparison</string>
    <string name="esta_de_acuerdo_con_sus_fotos">Are these pictures OK?</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is necessary for detection</string>
    <string name="permission_sms_rationale">Access to receive SMS is necessary for confirm code</string>
    <string name="no_camera_permission">This application cannot execute because it doesn`t have permits to Access the camera. The application will close now.</string>
    <string name="low_storage_error">Cannot download face detector dependencies due to low storage capacities of the device.</string>
    <string name="com.appsee.apikey" translatable="false">8c0cb1ef67b746d497b933587e5312cf</string>
    <string name="onboarding">Final</string>
    <string name="sin_permiso_camara">Without permitions to Access camera.</string>
    <string name="no_detecto_rostro">Cannot Access photo, please try with a new one and make sure there is good light</string>
    <string name="foto_invalida">Invalid Photo</string>
    <string name="repetir">No, repeat</string>
    <string name="permiso_almacenar">It`s necessary to Access device storage to save capture.</string>
    <string name="permiso_tomar_foto">It`s necessary to Access the camera to make the capture.</string>
    <string name="permiso_denegado">Permit denied.</string>
    <string name="no_se_encontro_imagen">Cannot found the image.</string>
    <string name="error_al_guardar_foto">Error at the moment of saving photo</string>
    <string name="no_se_detecto_rostro">Cannot detect a face.</string>
    <string name="directorio">Onboarding VeriTran</string>
    <string name="es_necesario_guardar_en_almacenamiento">It`s necessary to save the image in the device.</string>
    <string name="no_se_encontro_selfies">Cannot find captured selfie.</string>
    <string name="no_se_leyo_datos_personales">Cannot read your personal information.</string>
    <string name="no_se_leyo_todo_el_codigo_de_barras">Cannot find all the information in the detected code.</string>
    <string name="no_se_leyo_toda_la_informacion">not found the information</string>
    <string name="error_sin_permiso">Permissions error</string>
    <string name="no_encontro_imagen">Image not found</string>
    <string name="no_se_configuro_detector_de_rostro">Failed to configure face detector!</string>
    <string name="argentina">Argentina</string>
    <string name="no_detecto_codigo">cannot read the barcode</string>
    <string name="continuar">Yes, next step</string>
    <string name="foto">Foto</string>
    <string name="felicitaciones_onboarding_exitoso">Congratulations!\nSuccessful Onboarding</string>
    <string name="nuevo_onboarding">Proceed</string>
    <string name="t_mate_una_foto_del_rostro">Take a selfie\nto enroll yourself</string>
    <string name="camara">Camera</string>
    <string name="seleccionar">Gallery</string>
    <string name="bienvenido_a_veribank">Welcome to \n Onboarding VeriTran</string>
    <string name="tomar_foto_frontal_a_su_documento_de_identidad">Capture the frontside\nof your ID</string>
    <string name="tomar_foto_a_la_parte_trasera_del_documento_de_identidad">Capture the Barcode\nat the backside of your ID</string>
    <string name="paso_1">Paso 1</string>
    <string name="esta_de_acuerdo_con_su_foto">is your picture OK?</string>
    <string name="cedula">ID</string>
    <string name="nombre">Name</string>
    <string name="apellidos">Last Name</string>
    <string name="nacimiento">Birth Date</string>
    <string name="tipo_sangre">Blood Type</string>
    <string name="sexo">Gender</string>
    <string name="Comparar">Check</string>
    <string name="Informacion">Info</string>
    <string name="verificando_a_base_de_datos">Connecting to ID\nverification database</string>
    <string name="informacion_lista">Now we are ready\nto proceed with\nthe account opening</string>
    <string name="enfoque_la_c_mara_en_un_rostro">Enfoque la cámara en un rostro</string>
    <string name="photo">Picture</string>
    <string name="next_info">Next</string>
    <string name="hello_andrew">Hello, Andrew</string>
    <string name="we_are_glad_to_welcome_you">We are glad to welcome you!</string>
    <string name="personal_checking_account">Personal Checking Account</string>
    <string name="found_your_new_account">Found your new account</string>
    <string name="nuemero_telefonico">Number Phone</string>
    <string name="confirm">Confirm</string>
    <string name="phone_confirmed">Phone Confirmed Successful</string>
    <string name="campo_requerido">Field is required</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="veryfy_phone">Verify your phone number</string>
    <string name="content_verify_phone">VeriTran will send an SMS message to verify\nyour phone number. Enter your country code\nand phone number.</string>
    <string name="content_two_phone">We have sent you an SMS with a code to the\nnumber above.\n\nTo complete your verification, please enter the\n4 digit activation code.</string>
    <string name="generating_code">Generating verification code</string>
    <string name="agree">Aceptar</string>
    <string name="validating_code">Validating code</string>
    <string name="autofocus_fail">Camera cannot autofocus. Please try scanning under better light</string>
    <string name="err_license">Invalid licence key</string>
    <string name="LightOff">Light: off</string>
    <string name="LightOn">Light: on</string>
    <string name="error">Error</string>
    <string name="errorDesc">There has been an error starting the scanner.</string>
    <string name="photopayOK">OK</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

</resources>