<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.digitalonboarding.OnboardingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="@color/azul_principal"
    />

    <TextView
        android:id="@+id/txtTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/felicitaciones_onboarding_exitoso"
        android:gravity="center"
        android:textColor="@color/azul_principal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_below="@id/steper"
        />

    <ImageView
        android:id="@+id/steper"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/step4"/>



    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtTittle2"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:text="@string/informacion_lista"
                android:textColor="@color/azul_principal"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_height="wrap_content" />


            <Button
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginBottom="24dp"
                android:text="@string/nuevo_onboarding"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/btnProceed"
                android:onClick="reiniciar"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:layout_below="@id/txtTittle2"
                android:background="@drawable/buttons_blue_degree"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/txtTittle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/comprobado"
        android:tint="#22b473" />



</RelativeLayout>
