<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.digitalonboarding.InformationActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="170dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/fondoarriba">

        <ImageView
            android:layout_width="match_parent"
            android:visibility="visible"
            android:layout_height="80dp"
            android:src="@drawable/logo_veritran"
            android:padding="25dp" />

        <TextView
            android:text="@string/foto"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/txtTitulo"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:textColor="@android:color/background_light"
            android:paddingLeft="10dp"
          />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/cardView"
        app:cardCornerRadius="5dp"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintVertical_bias="0.84000003">

        <ImageView
            android:layout_margin="10dp"
            android:id="@+id/imgCapture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/linearLayout">

        <Button
            android:paddingLeft="20dp"
            android:text="@string/repetir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRepeat"
            android:layout_weight="1"
            android:onClick="tryPhoto"
            android:textColor="@color/azul_principal"
            android:background="@drawable/md_btn_selector_dark"
            android:drawableLeft="@drawable/ic_repetir"
            android:tint="#ccc"
            />

        <Button
            android:paddingRight="20dp"
            android:text="@string/continuar"
            android:layout_width="wrap_content"
            android:textColor="@color/azul_principal"
            android:layout_height="wrap_content"
            android:id="@+id/btnNext"
            android:layout_weight="1"
            android:onClick="next"
            android:background="@drawable/md_btn_selector_dark"
            android:drawableRight="@drawable/ic_continuar"
            android:tint="#ccc"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
