<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.digitalonboarding.CompareFacesActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="160dp"
        android:layout_width="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/azul_principal"
        android:id="@+id/linearLayout3" />


    <ImageView
        android:id="@+id/steper"
        android:layout_marginTop="5dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/step2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/cardView3"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        android:layout_marginBottom="32dp">

        <android.support.constraint.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Button
                android:text="@string/repetir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnRepeat"
                android:onClick="tryAgain"
                android:background="@drawable/buttons_red"
                android:textColor="@color/red"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txtTittle2"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textAllCaps="false"
                android:textSize="18sp" />
            <Button
                android:text="@string/continuar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnNext"
                android:onClick="showStep3"
                android:background="@drawable/buttons_blue_degree"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/btnRepeat"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="32dp"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:text="@string/esta_de_acuerdo_con_sus_fotos"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/txtTittle2"
                android:textColor="@color/azul_principal"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0.33"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/steper"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgStep1"
                android:src="#ffff"
                android:layout_weight="1"
                app:civ_border_width="7dp"
                app:civ_border_color="#115b9b"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="match_parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgStep2"
                android:layout_width="match_parent"
                android:src="#ffff"
                app:civ_border_width="7dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:civ_border_color="#115b9b"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_weight="1"
                android:text="@string/comparacion_exitosa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/azul_principal"
                android:id="@+id/lblId"
                android:textSize="24sp"
                android:gravity="center"
                android:textStyle="normal|bold"
                android:drawableRight="@drawable/ic_check_circle"
                android:layout_margin="14dp"
                android:layout_marginBottom="16dp" />

        </LinearLayout>



    </LinearLayout>



</android.support.constraint.ConstraintLayout>
