<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.digitalonboarding.Step1Activty">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="200dp"
        android:layout_width="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/azul_principal"
        android:id="@+id/linearLayout3" />
    <ImageView
        android:id="@+id/steper"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/step1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp" />

    <ImageView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:src="@drawable/foto1"
      app:layout_constraintBottom_toTopOf="@+id/cardView3"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/steper" />

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/cardView3"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        android:layout_marginBottom="32dp">

        <android.support.constraint.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Button
                android:text="@string/camara"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnCamera"
                android:onClick="showDetectFaceCamera"
                android:background="@drawable/buttons_blue_degree"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/lblId"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textAllCaps="false"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="18sp" />
            <Button
                android:visibility="gone"
                android:text="@string/seleccionar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnSelect"
                android:onClick="selectPhoto"
                android:background="@drawable/buttons_blue_degree"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/btnCamera"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="32dp"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:text="@string/t_mate_una_foto_del_rostro"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/lblId"
                android:textColor="@color/azul_principal"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0.33"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>




</android.support.constraint.ConstraintLayout>
